# kiomet

./: .gitlab-ci.yml  .gitmodules  Makefile  README.md  Readme.md
.github/workflows/: build.yml
assets/audio/: README.md
assets/embed/: iframe.html
assets/embed/gamedistribution/: index.html
assets/embed/microsoft/: .~lock.listingData9PLBJHN00T03-1152921505697505817.csv#  install.ps1  kiomet.com.classic.appxbundle  kiomet.com.msixbundle  kiomet.com.sideload.msix  listingData9PLBJHN00T03-1152921505697505817.csv
assets/paintings/: Makefile  README.md
client/: .gitignore  Cargo.toml  Makefile  build.rs  index.dev.html  index.html
client/.cargo/: config.toml
client/data/: manifest.json
client/src/: animation.rs  audio.json  background.rs  color.rs  finite_index.rs  game.rs  key_dispenser.rs  layout.rs  main.rs  path.rs  road.rs  settings.rs  state.rs  territory.rs  translation.rs  tutorial.rs  ui.rs  visible.rs
client/src/shader/: background.frag  background.vert  path.vert  road.frag  road.vert
client/src/shaders/: background.frag  background.vert  path.frag  path.vert  road.frag  road.vert
client/src/ui/: about_dialog.rs  alert_overlay.rs  button.rs  changelog_dialog.rs  game_ui.rs  help_dialog.rs  lock_dialog.rs  mod.rs  phrases.rs  tower_icon.rs  tower_overlay.rs  towers_dialog.rs  unit_icon.rs  units_dialog.rs
client/src/ui/translations/: credits.md  licenses.md
client/src/ui/translations/about/: en.md  fr.md  it.md  zh.md
client/src/ui/translations/help/: de.md  en.md  fr.md  it.md  zh.md
common/: .gitignore  Cargo.toml
common/src/: alerts.rs  chunk.rs  combatants.rs  death_reason.rs  enum_array.rs  field.rs  force.rs  info.rs  lib.rs  macros.rs  player.rs  protocol.rs  singleton.rs  ticks.rs  tower.rs  unit.rs  units.rs  world.rs
common/src/chunk/: benchmark.rs  event.rs  halt.rs  id.rs  maintenance.rs  rectangle.rs
common/src/tower/: connectivity.rs  id.rs  map.rs  rectangle.rs  set.rs
common/src/world/: towers.rs
engine/: .gitlab-ci.yml
engine/client_util/: Cargo.toml
engine/client_util/src/: audio.rs  browser_storage.rs  context.rs  frontend.rs  game_client.rs  infrastructure.rs  joined.rs  js_util.rs  keyboard.rs  lib.rs  pan_zoom.rs  rate_limiter.rs  reconn_web_socket.rs  setting.rs  un_jitter.rs  web_socket.rs
engine/common_util/: Cargo.toml
engine/common_util/src/: actor.rs  actor2.rs  alloc.rs  angle.rs  collision.rs  entities.rs  hash.rs  lib.rs  mask.rs  sector.rs  storage.rs  ticks.rs  x_vec2.rs
engine/core_protocol/: Cargo.toml
engine/core_protocol/src/: dto.rs  id.rs  lib.rs  metrics.rs  name.rs  owned.rs  plasma.rs  prelude.rs  rpc.rs  serde_util.rs
engine/engine_macros/: Cargo.toml
engine/engine_macros/src/: audio.rs  hb_hash.rs  layer.rs  lib.rs  settings.rs  vertex.rs
engine/game_server/: Cargo.toml  build.rs
engine/game_server/src/: admin.rs  arena.rs  bot.rs  chat.rs  client.rs  context.rs  context_service.rs  entry_point.rs  game_service.rs  infrastructure.rs  invitation.rs  leaderboard.rs  lib.rs  liveboard.rs  log.rs  metric.rs  options.rs  plasma.rs  player.rs  shutdown.rs  static_files.rs  system.rs  team.rs  util.rs
engine/game_server/src/net/: ip.rs  mod.rs  tls.rs
engine/game_server/src/snippets/: ads.js  gamedistribution.js
engine/game_terraform/: linode.tf  server_init.sh
engine/hot_swap/: Cargo.toml
engine/hot_swap/src/: main.rs
engine/js/: ads.txt
engine/licensing/src/: main.rs
engine/renderer/: Cargo.toml
engine/renderer/src/: attribs.rs  buffer.rs  deque.rs  framebuffer.rs  index.rs  instance.rs  lib.rs  query.rs  renderer.rs  shader.rs  srgb_layer.rs  texture.rs  toggle.rs  vertex.rs
engine/renderer2d/: Cargo.toml
engine/renderer2d/examples/: Cargo.toml
engine/renderer2d/examples/src/: main.rs
engine/renderer2d/src/: background.rs  camera_2d.rs  graphic.rs  lib.rs  particle.rs
engine/renderer3d/: Cargo.toml
engine/renderer3d/src/: aabb.rs  camera_3d.rs  crosshair.rs  free_camera.rs  lib.rs  shadow.rs  skybox.rs  svg.rs
engine/server_util/: Cargo.toml
engine/server_util/src/: generate_id.rs  health.rs  ip_rate_limiter.rs  lib.rs  linode.rs  observer.rs  rate_limiter.rs  ssl.rs
engine/sprite_sheet/: Cargo.toml
engine/sprite_sheet/src/: lib.rs
engine/sprite_sheet_util/: Cargo.toml
engine/sprite_sheet_util/src/: audio.rs  compress.rs  lib.rs  sprite.rs
engine/terraform/: iam.tf
engine/yew_frontend/: Cargo.toml
engine/yew_frontend/src/: frontend.rs  lib.rs  translation.rs
engine/yew_frontend/src/component/: account_menu.rs  context_menu.rs  curtain.rs  level_meter.rs  mod.rs  section.rs
engine/yew_frontend/src/dialog/: dialog.rs  health_dialog.rs  mod.rs  profile_dialog.rs  settings_dialog.rs  store_dialog.rs  terms_dialog.rs
engine/yew_frontend/src/overlay/: chat.rs  instructions.rs  leaderboard.rs  mod.rs  spawn.rs  team.rs
engine/yew_frontend/src/window/: event_listener.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: .gitignore  Cargo.toml  Makefile
server/src/: bot.rs  main.rs  regulator.rs  service.rs  world.rs
sprite_sheet_packer/: Cargo.toml
sprite_sheet_packer/src/: main.rs
terraform/: main.tf
