[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
server = [ "dep:rand" ]
default = [ "server" ]

[dependencies]
common_util = { path = "../engine/common_util" }
core_protocol = { path = "../engine/core_protocol" }
diff-struct = { version = "0.5.2", default-features = false }
flagset = "0.4"
fxhash = "0.2.1"
glam = "0.22"
macros = { path = "../macros" }
num-integer = "0.1.45"
num_enum = "0.5"
pathfinding = "3.0"
rand = { version = "0.8", optional = true }
serde = "1"
serde-big-array = "0.4.1"
strum = { version = "0.24.1", features = [ "derive" ] }

[dev-dependencies]
bincode = "1.3.3"