[package]
name = "common_util"
workspace = ".."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[lib]
name = "common_util"
path = "src/lib.rs"

[features]
rand = ["dep:rand"]

[dependencies]
core_protocol = { path = "../core_protocol" }
fastapprox = "0.3.0"
fxhash = "0.2"
glam = { version = "0.22", features = ["debug-glam-assert"] }
maybe_parallel_iterator = "0.12"
paste = "1.0.12"
rand = { version = "0.8", optional = true }
serde = "1.0"
engine_macros = { path = "../engine_macros" }

[dev-dependencies]
glam = { version = "0.22", features = ["rand"] }
rand = "0.8"
rand_chacha = "0.3.1"
serde_json = "1.0"
