[package]
name = "core_protocol"
workspace = ".."
version = "0.1.0"
authors = ["Softbear, Inc."]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
actix = { version = "0.13", optional = true }
arrayvec = { version = "0.7", features = ["serde"] }
bitcode = { version = "0.4.0", git = "https://github.com/SoftbearStudios/bitcode", features = ["serde"] }
derive_more = "0.99"
minicdn = { version = "0.1.20", features = [
    "mime",
    "etag",
    "gzip",
    "brotli",
    "webp",
    "serde",
    "config",
], optional = true } # Must sync features with game_server
rand = { version = "0.8", optional = true }
rustrict = { version = "0.7.8", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
variant_count = "1.1"

[features]
admin = ["minicdn", "rustrict/customize", "rustrict/serde"]
server = [
    "dep:actix",
    "admin",
    "rustrict/censor",
    "rustrict/width",
    "dep:rand",
    "serde/rc",
]
