[package]
name = "server_util"
workspace = ".."
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.13"
arrayvec = { version = "0.7", features = ["serde"] }
async-trait = "0.1"
atomic_refcell = "0.1"
axum = "0"
common_util = { path = "../common_util" }
core_protocol = { path = "../core_protocol", features = ["server"] }
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.7"
num_cpus = "1.13"
rand = "0.8"
reqwest = { version = "0.11.9", features = ["json"], default-features = false }
rustls = "0.21"
rustls-pemfile = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
simple_server_status = "0.2.0"
tokio = { version = "1", features = ["macros", "time"] }
woothee = "0.13"
x509-parser = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", features = ["resource"], default-features = false }
